updated style sheets and added comments

--- a/src/app/features/stkResearch/stkResearch.component.html
+++ b/src/app/features/stkResearch/stkResearch.component.html
@@ -1,4 +1,4 @@
-<div class="mainDivStyle">
+<!-- <div class="mainDivStyle">
     <div class="searchDiv">
         <app-stkSearch></app-stkSearch>
     </div>
@@ -8,5 +8,15 @@
             <tr><td><app-stkStats></app-stkStats></td></tr>
             <tr><td><app-stkCharts></app-stkCharts></td></tr>
         </table>
+    </div>
+</div> -->
+
+
+<div class="stock-research-container">
+    <div class="stock-serach">
+        <app-stkSearch></app-stkSearch>
+    </div>
+    <div class="stock-research-data">
+
     </div>
 </div>
