--- a/src/app/features/stkResearch/stkResearch.component.css
+++ b/src/app/features/stkResearch/stkResearch.component.css
@@ -5,10 +5,10 @@
 tr{
     width:200px;
 } */
-.mainDivStyle{
+/* .mainDivStyle{
     float: left;
     margin: 5px;
-    /* border: 5px solid black; */
+    border: 5px solid black;
 }
 
 .searchDiv{
@@ -22,7 +22,7 @@ tr{
 .tableDiv{
     float: left;
     margin: 5px;
-    /* border: 5px solid black; */
+    border: 5px solid black;
     padding: 5px;
     margin: 5px;
     height: 100px;
@@ -31,4 +31,31 @@ tr{
 
 .mainTable{
     float: left;
+} */
+
+
+
+.stock-research-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    box-sizing: border-box;
+    margin: 0px auto;
+    padding: 10px;
+    width: 90%;
+}
+
+.stock-serach{
+    margin: 5px auto;
+    padding: 5px;
+    width: 25%;
+    border: 5px solid black;
+}
+
+.stock-research-data{
+    margin: 5px auto;
+    padding: 5px;
+    width: 65%;
+    border: 5px solid black;
 }
