--- a/src/app/features/stkResearch/stkAbout/stkAbout.component.html
+++ b/src/app/features/stkResearch/stkAbout/stkAbout.component.html
@@ -1,4 +1,4 @@
-<div
+<!-- <div
     class="stkAbout"
     *ngIf="description">
     {{description}}
@@ -7,4 +7,9 @@
     <div>
         Stock introduction to be displayed
     </div>
-</ng-template>
+</ng-template> -->
+
+
+<div class="about-stock" *ngIf="description">
+    {{description}}
+</div>
