--- a/src/app/features/stkResearch/stkResearch.component.html
+++ b/src/app/features/stkResearch/stkResearch.component.html
@@ -17,6 +17,14 @@
         <app-stkSearch></app-stkSearch>
     </div>
     <div class="stock-research-data">
-
+        <div class="stock-about">
+            <app-stkAbout></app-stkAbout>
+        </div>
+        <div class="stock-stats">
+            <app-stkStats></app-stkStats>
+        </div>
+        <div class="stock-charts">
+            <app-stkCharts></app-stkCharts>
+        </div>
     </div>
 </div>
