--- a/src/app/features/stkResearch/stkStats/stkStats.component.html
+++ b/src/app/features/stkResearch/stkStats/stkStats.component.html
@@ -1,6 +1,17 @@
-<div class="divStats">
+<!-- <div class="divStats">
   <table>
     <tr><td>OPEN - </td><td>{{open}}</td><td>CLOSE - </td><td>{{close}}</td></tr>
     <tr><td>HIGH - </td><td>{{stats.high}}</td><td>LOW - </td><td>{{stats.low}}</td></tr>
   </table>
+</div> -->
+
+<div class="stock-ohlc">
+  <h3>OPEN</h3>
+  <p>10</p>
+  <h3>CLOSE</h3>
+  <p>{{close}}</p>
+  <h3>HIGH</h3>
+  <p>{{high}}</p>
+  <h3>LOW</h3>
+  <p>10</p>
 </div>
