--- a/src/app/features/stkResearch/stkStats/stkStats.component.html
+++ b/src/app/features/stkResearch/stkStats/stkStats.component.html
@@ -7,11 +7,11 @@
 
 <div class="stock-ohlc">
   <h3>OPEN</h3>
-  <p>10</p>
+  <p>{{open}}</p>
   <h3>CLOSE</h3>
   <p>{{close}}</p>
   <h3>HIGH</h3>
   <p>{{high}}</p>
   <h3>LOW</h3>
-  <p>10</p>
+  <p>{{low}}</p>
 </div>
