--- a/src/app/features/stkResearch/stkAbout/stkAbout.component.css
+++ b/src/app/features/stkResearch/stkAbout/stkAbout.component.css
@@ -7,6 +7,7 @@
 
 .about-stock{
     margin: auto;
-    padding: 0px;
-    width: 100%;
+    padding: 5px;
+    width: 90%;
+    text-align: justify;
 }
