--- a/src/app/features/stkResearch/stkCharts/stkCharts.component.css
+++ b/src/app/features/stkResearch/stkCharts/stkCharts.component.css
@@ -1,39 +1,29 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background-color: #333;
+.charts-container{
+    margin: 0px auto;
+    padding: 0px;
+    width: 100%;
 }
 
-li {
-    float: left;
+.months-chart-data{
+    margin: 0px auto;
+    width: 60%;
 }
 
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    text-decoration: none;
+.months-chart-data > button{
+    margin: 0px auto;
+    padding: 0px;
+    width: 22%;
+    justify-content: center;
+    align-content: center;
 }
 
-li a:hover {
-    background-color: #111;
+.display-chart{
+    margin: 0px auto;
+    padding: 0px;
+    widows: 90%;
 }
 
-.divCharts{
-    border: solid 5px yellow;
-    background-color: yellowgreen;
-    color: black;
-    padding: 15px;
+.display-chart > canvas {
+    width: 100%;
+    height: 100%;
 }
-
-canvas{
-
-    width:900px !important;
-    height:350px !important;
-  
-  }
