--- a/src/app/features/stkResearch/stkAbout/stkAbout.component.css
+++ b/src/app/features/stkResearch/stkAbout/stkAbout.component.css
@@ -1,10 +1,4 @@
-/* .stkAbout{
-    color: black;
-    padding: 5px;
-    border: solid 5px green;
-    width: auto;
-} */
-
+/* About-Stock- Styling */
 .about-stock{
     margin: auto;
     padding: 5px;
