--- a/src/app/features/user-profile/profile-account-details/profile-account-details.component.css
+++ b/src/app/features/user-profile/profile-account-details/profile-account-details.component.css
@@ -1,4 +1,4 @@
-.divContainer{
+/* .divContainer{
     border: solid 5px black;
     margin: 5px;
     padding: 5px;
@@ -12,4 +12,4 @@
     height: 150px;
     width: 260px;
     float: left;
-}
+} */
