--- a/src/app/features/user-profile/profile-graph/profile-graph.component.css
+++ b/src/app/features/user-profile/profile-graph/profile-graph.component.css
@@ -1,8 +1,8 @@
-.divMain{
+/* .divMain{
     border: 5px solid blue;
     margin: 5px;
     padding: 5px;
     width: 200px;
     height: 150px;
     float: left;
-}
+} */
