--- a/src/app/features/user-profile/profile-stocks/profile-stocks.component.css
+++ b/src/app/features/user-profile/profile-stocks/profile-stocks.component.css
@@ -1,31 +1,5 @@
-/* .mainDiv {
-    border: 5px solid black;
-    padding-right: 30px;
-    margin: 5px;
-    margin-left: 55px;
-    height: 320px;
-    width: 600px;
-    overflow: scroll;
-}
 
-.templateDiv {
-    margin: 20px;
-    padding: 5px;
-}
-td{
-    border: 5px solid black;
-    margin: 5px;
-    padding: 10px;
-
-}
-
-tr{
-    padding: 30px;
-    margin: 10px;
-    font-size: 20px;
-} */
-
-
+/* Container that holds the stocks owned by the user */
 .owned-stocks-container{
     margin: 10px auto;
     border: 5px solid black;
