minor changes to comps

--- a/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist.component.html
+++ b/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist.component.html
@@ -3,7 +3,9 @@
   <app-stock-mng-watchlist-item
   *ngFor= "let item of stkList"
   [data] = "item"
-  (stkSymbol)="removeItem($event)"
+  (renderComp)="reRender($event)"
   >
   </app-stock-mng-watchlist-item>
 </div>
+
+
