final changes to the project

--- a/src/app/features/stkResearch/stkStats/stkStats.component.html
+++ b/src/app/features/stkResearch/stkStats/stkStats.component.html
@@ -1,10 +1,10 @@
 <div class="stock-ohlc">
   <h3>OPEN</h3>
-  <p>{{open}}</p>
+  <p>{{stats.open.price}}</p>
   <h3>CLOSE</h3>
-  <p>{{close}}</p>
+  <p>{{stats.close.price}}</p>
   <h3>HIGH</h3>
-  <p>{{high}}</p>
+  <p>{{stats.high}}</p>
   <h3>LOW</h3>
-  <p>{{low}}</p>
+  <p>{{stats.low}}</p>
 </div>
