--- a/src/app/features/stock-management/stock-mng-stocks/stock-mng-stock-item/stock-mng-stock-item.component.html
+++ b/src/app/features/stock-management/stock-mng-stocks/stock-mng-stock-item/stock-mng-stock-item.component.html
@@ -1,6 +1,6 @@
 <div class="manage-ownedStock-row">
-  <h3>{{stock | uppercase}}</h3>
-  <input [(ngModel)] = "number">
+  <h3>{{data.stock | uppercase}}</h3>
+  <input [(ngModel)] = "inputNumber">
   <button
   (click)="buyStock()"
   >
